# qa_guru_8_hw_18

./: README.md  pyproject.toml
