[tool.poetry]
name = "qa-guru-8-hw-18"
version = "0.0.1"
description = "Qa Guru 8 home work 18"
authors = ["a.skorik <a.skorik@petrovich.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pytest = ">=7.3.1,<7.4.0"
selene = ">=2.0.0b4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
